# python-project-template

./: .coveragerc  .gitignore  CREATE.sh  Makefile  README.md  make.sh  mypy.ini  pyproject.toml  readme_template.md
.github/workflows/: build.yaml
