[tool.poetry]
name = {PACKAGE_NAME}
version = "0.0.1"
description = ""
authors = ["w2sv <zangenbergjanek@googlemail.com>"]
{LICENSE} = "{LICENSE}"
repository = "https://github.com/w2sv/{REPO_NAME}"
keywords=[]
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: {LICENSE} License",
        "Operating System :: OS Independent",
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^{PY_VERSION}"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "*"
coverage = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
