[tool.poetry]
name = "{PACKAGE_NAME}"
version = "0.0.1"
description = "{DESCRIPTION}"
authors = ["{USER} <{EMAIL}>"]
license = "{LICENSE}"
repository = "https://github.com/{USER}/{PACKAGE_NAME}"
keywords=[]
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved ::  License",
        "Operating System :: OS Independent",
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^{PY_VERSION}"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "*"
coverage = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
